# kairos

./: Cargo.toml  README.md  flake.nix
kairos-cli/: Cargo.toml
kairos-cli/src/: config.rs  init.rs  knock.rs  main.rs
kairos-core/: Cargo.toml
kairos-core/src/: lib.rs
kairosd/: Cargo.toml
kairosd/src/: config.rs  firewall.rs  knock.rs  main.rs  store.rs
nix/: flake-module.nix  kairos.nft  module.nix  nixos-host.nix  provision-user.sh  test.nix
