[package]
name        = "kairos-core"
description = "TOTP-derived port-knocking sequence derivation"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
hex     = "0.4"
hmac    = "0.12"
sha2    = "0.10"
zeroize = { version = "1", features = ["derive"] }
