[package]
name        = "kairosd"
description = "TOTP-derived port-knocking daemon"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
kairos-core = { path = "../kairos-core" }
anyhow      = "1"
clap        = { version = "4", features = ["derive", "env"] }
libc        = "0.2"
pcap        = "2"
pnet_packet = "0.35"
sd-notify   = "0.4"
signal-hook = "0.3"
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize     = "1"

[dev-dependencies]
tempfile = "3"
